Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.13.0
Description
cpp/CMakeLists.txt
option(ARROW_PLASMA "Build the plasma object store along with Arrow" ON)
sequence:
(1) call PlasmaClient::Create(id_object, data_size, 0, 0, &buff, 0)
(2) call PlasmaClient::Release(id_object)
(3) call PlasmaClient::Abort(id_object)
(4) call PlasmaClient::Create(id_object, data_size, 0, 0, &buff, 0) // where the id_object is the same as (1)
(5) call PlasmaClient::Release(id_object)
(6) call PlasmaClient::Abort(id_object)
(7) call PlasmaClient::Create(id_object, data_size, 0, 0, &buff, 0) // where the id_object is the same as (1)
server crash!
F0508 10:03:09.546859 32587 eviction_policy.cc:27] Check failed: it == item_map_.end()
-
-
- Check failure stack trace: ***
- Aborted at 1557280989 (unix time) try "date -d @1557280989" if you are using GNU date ***
PC: @ 0x7f5403a46428 gsignal - SIGABRT (@0x3e800007f4b) received by PID 32587 (TID 0x7f5406950f80) from PID 32587; stack trace: ***
@ 0x7f5403dec390 (unknown)
@ 0x7f5403a46428 gsignal
@ 0x7f5403a4802a abort
@ 0x7f5405780f69 google::logging_fail()
@ 0x7f5405782a3d google::LogMessage::Fail()
@ 0x7f5405785054 google::LogMessage::SendToLog()
@ 0x7f540578255b google::LogMessage::Flush()
@ 0x7f5405782779 google::LogMessage::~LogMessage()
@ 0x7f54053f98bd arrow::util::ArrowLog::~ArrowLog()
@ 0x4afcae plasma::LRUCache::Add()
@ 0x4b00f1 plasma::EvictionPolicy::ObjectCreated()
@ 0x4b61e0 plasma::PlasmaStore::CreateObject()
@ 0x4babcc plasma::PlasmaStore::ProcessMessage()
@ 0x4b95c3 _ZZN6plasma11PlasmaStore13ConnectClientEiENKUliE_clEi
@ 0x4bdb80 _ZNSt17_Function_handlerIFviEZN6plasma11PlasmaStore13ConnectClientEiEUliE_E9_M_invokeERKSt9_Any_dataOi
@ 0x4aba58 std::function<>::operator()()
@ 0x4aaf67 plasma::EventLoop::FileEventCallback()
@ 0x4dc1bd aeProcessEvents
@ 0x4dc37e aeMain
@ 0x4ab25b plasma::EventLoop::Start()
@ 0x4c00c1 plasma::PlasmaStoreRunner::Start()
@ 0x4bc77b plasma::StartServer()
@ 0x4bd3eb main
@ 0x7f5403a31830 __libc_start_main
@ 0x49e9f9 _start
@ 0x0 (unknown)
Aborted (core dumped)
-
Attachments
Issue Links
- links to