ARROW-5283: [C++][Plasma] erase object id in client when abort object